New queue system, album queueing working
Lots of changes. Implemented a helper function and now the queue is handled
within the helper program instead of by mplayer.

Queueing songs is working
Queueing albums is working
Clearing the queue is working

There is very little in the way of error checking. Bad things might happen if
you enter in a wrong value somewhere.

Also, this uses shared memory, which means that /etc/php/php.ini must load the
following extensions:

extension=sysvmsg.so
extension=sysvsem.so
extension=sysvshm.so

Otherwise things don't work.

Up next is next, prev, and repeat, and maybe some UI fixes.

--- a/settings.inc.php.sample
+++ b/settings.inc.php.sample
@@ -1,5 +1,5 @@
 <?php
-$server = 'myserver';
+$server = 'myserver.net';
 $port = 443;
 $username = 'myuser';
 $password = 'mypassword';
@@ -7,5 +7,24 @@ $password = 'mypassword';
 $method = 'http';
 $mplayerfifo = '/tmp/clisonic.fifo';
 $mp3dir = '/tmp';
-$cachesize = 500; # Song cache size in KB
+$cachesize = 500; //  Song cache size in KB
+$bufferTime = 0; // Time before a song ends to buffer the next one
+// Leave $bufferTime at 0 for now, as it will break things if you change it
+
+
+
+
+
+
+$app = 'clisonic-php';
+$apiver = '1.7.0';
+$baseurl = "$method://$server:$port/rest";
+$dopts = "?u=$username&p=$password&v=$apiver&c=$app";
+$stdio = fopen("php://stdin","r");
+
+// Constants
+define("SHM_KEY", "55555");
+define("SHM_QUEUE_KEY", "20000");
+define("SHM_PID_KEY", "20010");
+define("SHM_TIMELEFT_KEY", "20020");
 ?>
